Signed-off-by: cremazer <cremazer@gmail.com>

--- a/_posts/2017-11-29-test.md
+++ b/_posts/2017-11-29-test.md
@@ -9,7 +9,7 @@ tags:
 - life
 - tips
 twitter_text: Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-introduction: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+introduction: sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 ---
 
 TEST2
